# robot_ws

./: .gitignore  README.MD
Log/: OrbbecSDK.log.txt
src/motion_planner/: CMakeLists.txt  package.xml
src/motion_planner/config/: motion_planner_params.yaml
src/motion_planner/include/: motion_planner.hpp  trajectory_optimizer.hpp
src/motion_planner/launch/: motion_planner.launch.py
src/motion_planner/src/: main.cpp  motion_planner.cpp  trajectory_optimizer.cpp
src/motion_planner/srv/: PlanCartesianPath.srv  PlanGraspSequence.srv  PlanJointPath.srv
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py
src/robot_description/rviz/: urdf.rviz  urdf_config.rviz
src/robot_description/urdf/: seed_robot.urdf  seed_robot.urdf.xacro  seed_robot_new.urdf.xacro
src/robot_driver/: CMakeLists.txt  package.xml
src/robot_driver/config/: robot_driver_params.yaml  simulation_params.yaml
src/robot_driver/include/: command_builder.hpp  seed_robot_driver.hpp  serial_communication.hpp
src/robot_driver/launch/: robot_driver.launch.py  robot_driver_with_moveit.launch.py  test_robot_driver.launch.py
src/robot_driver/src/: command_builder.cpp  main.cpp  seed_robot_driver.cpp  serial_communication.cpp
src/robot_driver/test/: test_robot_driver.cpp  test_serial_mock.cpp
src/robot_task/: CMakeLists.txt  package.xml
src/robot_task/config/: task_manager_params.yaml
src/robot_task/include/: task_manager.hpp
src/robot_task/launch/: robot_task.launch.py
src/robot_task/msg/: ObjectPose.msg  TaskStatus.msg
src/robot_task/src/: main.cpp  task_manager.cpp
src/robot_task/srv/: GraspObject.srv
src/robot_visioner/: CMakeLists.txt  diagnose_package.sh  package.xml  setup.cfg  setup.py
src/robot_visioner/config/: enhanced_yolo_config.yaml  enhanced_yolo_config.yaml.yaml  robot_visioner_config.yaml  yolo_config.yaml
src/robot_visioner/include/: robot_visioner.hpp
src/robot_visioner/launch/: robot_visioner.launch.py
src/robot_visioner/robot_visioner/: yolo_detector_node.py
src/robot_visioner/scripts/: utils.py  yolo_detector_node.py
src/robot_visioner/src/: robot_visioner.cpp
src/seed_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/seed_robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml  seed_robot.ros2_control.xacro  seed_robot.srdf
src/seed_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/sr_moveit2/: CMakeLists.txt  package.xml
src/sr_moveit2/config/: initial_positions.yaml  seed_robot.urdf.xacro
src/sr_moveit2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/sr_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
src/sr_moveit2_config/config/: moveit_controllers.yaml  seed_robot.srdf  seed_robot.urdf.xacro
src/sr_moveit2_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
